
  * When a build dependency regresses and the --allow-build-dependency-regressions
    flag is used, we need to rebuild packages that experience such regressions.  It
    is not correct that they don't need rebuilding because they were built with even
    newer packages than the ones available.  Frequently they have binary dependencies
    on packages that are no longer available.

 -- David Fox <dsf@seereason.com>  Wed, 10 Sep 2008 10:21:03 -0700

autobuilder (4.26) unstable; urgency=low

  * Slightly relax the expression to recognize a date string so the
    entry in gtk2hs parses ("Thu, 8 Jul 2008 11:16:33 -0300", missing
    a leading space or zero before the first 8.)

 -- David Fox <dsf@seereason.com>  Wed, 03 Sep 2008 10:13:38 -0700

autobuilder (4.25) unstable; urgency=low

  * Improve reporting of dependency cycles, show a table of exactly
    which binary and source packages participated in cycles that need

 -- David Fox <dsf@seereason.com>  Wed, 20 Aug 2008 09:21:43 -0700

autobuilder (4.24) unstable; urgency=low

  * Return type of Debian.GenBuildDeps.buildable changed.

 -- David Fox <dsf@seereason.com>  Mon, 18 Aug 2008 12:47:39 -0700

autobuilder (4.23) unstable; urgency=low

  * API changes in haskell-debian.

 -- David Fox <dsf@seereason.com>  Sat, 19 Jul 2008 07:36:44 -0700

autobuilder (4.22) unstable; urgency=low

  * Most functions that were previously in the TIO monad now work with any
    monad that is an instance of CIO, which includes IO.
  * Remove files from the uri directory if they have bad checksums.

 -- David Fox <dsf@seereason.com>  Sat, 28 Jun 2008 15:57:20 -0700

autobuilder (4.21) unstable; urgency=low

  * Store the dependency info and the relaxed dependency info with the target.
    We need to use the relaxed dependency info both when deciding which target
    to build next, and when deciding whether the target needs to be rebuilt.
    The full dependency info is used when computing the build dependency solution.
