@@ -5,6 +5,7 @@ autobuilder (4.27) unstable; urgency=low
     is not correct that they don't need rebuilding because they were built with even
     newer packages than the ones available.  Frequently they have binary dependencies
     on packages that are no longer available.
+  * Fix a bug in the build dependency computations which caused unnecessary rebuilds.
 
  -- David Fox <dsf@seereason.com>  Wed, 10 Sep 2008 10:21:03 -0700
 
